# Sweetie-Bot-Plugins_for_CERBERUS-API

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MAINTENANCE_AUDIT.md  Makefile  PACKAGE_NOTES.md  PACKAGING.md  README.md  REAL_HARDWARE_STATUS.md  docker-compose.yml  plugin-contract-map.json  pyproject.toml  pytest.ini  requirements-dev.txt
.github/: CODEOWNERS  SECURITY.md  SUPPORT.md  dependabot.yml  labels.yml  project-board-seed.yml  pull_request_template.md
accessories/: audio_output.py
api/: app.py
attention/: models.py
audio/: queue.py
behavior/: director.py
character/: schemas.py
cli/: main.py
controller/: README.md
controller_patch/: CONTROLLER_UI_TODO.md  README.md  controller_endpoints.seed.json
dialogue/: manager.py  models.py  providers.py  templates.py
docs/: 00_Architecture_Overview.md  01_Plugin_API_Contract.md  02_State_Model_and_Ownership.md  03_Controller_Orchestration.md  04_Repository_Structure.md  05_Implementation_Roadmap.md  06_Migration_Guide.md  AI_CONTINUATION_PLAYBOOK.md  AI_Design_Document.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONVENTION_DEMO_PLAN.md  FIRST_COMMIT_SERIES.md  IMPLEMENTATION_PLAN.md  INTEGRATION_PACK_V2_OVERVIEW.md  PLUGIN_CONFIG_EXAMPLES.md  PLUGIN_TEST_SUITE.md  PROJECT_BOARD_SEED.md  PROJECT_STATUS.md  README.md  REAL_HARDWARE_TODO.md  REQUIREMENTS.md  ROADMAP.md  SAFETY_CASE.md  STATE.md  SweetieBot_Team_Instructions.md  VISION.md  short description.txt
examples/: controller-direct-fetch.js  python_client_example.py
integration/: __init__.py  cerberus_mapper.py
memory/: context.py  models.py
observability/: logging.py
persona/: state_machine.py
plugins/: README.md  __init__.py  base.py  builtins.py  config.py  core_builtins.py  health.py  manifest.py  registry.py  types.py
routines/: advanced.py  models.py
safety/: gate.py
schemas/: command.schema.json  error.schema.json  event.schema.json  execute.request.schema.json  execute.response.schema.json  manifest.schema.json
scripts/: bootstrap.py  github_seed.py  map_plugin_contracts.py  run_plugin_test_suite.py  tree.py
stack/: .env.example  docker-compose.yml
state/: models.py
sweetiebot/: errors.py  runtime.py
sweetiebot-assets/: README.md
sweetiebot-ops/: README.md
sweetiebot_fork.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
telemetry/: models.py
tests/: README.md  conftest.py  contract_matrix.json  integration_runner.py  plugin_expectations.py  test_api_character.py  test_api_health_and_speech.py  test_api_scaffold.py  test_attention_strategy.py  test_behavior_api.py  test_behavior_director.py  test_cli_and_validation.py  test_cli_health.py  test_concurrency_stability.py  test_dialogue_api.py  test_dialogue_manager.py  test_dialogue_provider.py  test_dialogue_providers.py  test_emote_mapper.py  test_execute_smoke.py  test_first_slice_e2e.py  test_mood_api.py  (+23 more)
(+608 files in other folders)
